--- a/src/app/pages/history/history.component.html
+++ b/src/app/pages/history/history.component.html
@@ -15,6 +15,6 @@
   </div>
 
   <ng-template #noHistory>
-    <p>No histry available.</p>
+    <p>No history available.</p>
   </ng-template>
 </div>
